--- a/index.html
+++ b/index.html
@@ -4,61 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Justin Airlines</title>
-<style>
-    body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        background: linear-gradient(to bottom, #a0d8f1, #ffffff);
-        text-align: center;
-        color: #004080;
-    }
-    header {
-        background-color: #004080;
-        color: white;
-        padding: 20px;
-    }
-    nav a {
-        margin: 0 15px;
-        color: white;
-        text-decoration: none;
-        font-weight: bold;
-    }
-    nav a:hover {
-        text-decoration: underline;
-    }
-    main {
-        padding: 50px 20px;
-    }
-    button {
-        padding: 15px 30px;
-        font-size: 16px;
-        background-color: #0080ff;
-        color: white;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        margin: 10px 0;
-    }
-    button:hover {
-        background-color: #0059b3;
-    }
-    footer {
-        background-color: #004080;
-        color: white;
-        padding: 15px;
-        position: fixed;
-        bottom: 0;
-        width: 100%;
-    }
-    a.email-link {
-        color: #004080;
-        text-decoration: none;
-        font-weight: bold;
-    }
-    a.email-link:hover {
-        text-decoration: underline;
-    }
-</style>
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
@@ -103,3 +49,4 @@
 
 </body>
 </html>
+
