--- a/index.html
+++ b/index.html
@@ -3,50 +3,66 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Justin Airlines</title>
+<title>Justin Airlines Magazine</title>
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
 <header>
-    <h1>Justin Airlines</h1>
+    <h1>Justin Airlines Magazine</h1>
     <nav>
         <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#flights">Flights</a>
+        <a href="#news">News</a>
+        <a href="#features">Features</a>
         <a href="#contact">Contact</a>
     </nav>
 </header>
 
 <main>
-    <section id="home">
-        <h2>Welcome to Justin Airlines!</h2>
-        <p>Fly with us on GeoFS and join our community.</p>
-        <a href="https://discord.gg/YOUR_INVITE_CODE" target="_blank">
-            <button>Meet us on Discord!</button>
-        </a>
+    <section id="home" class="hero">
+        <h2>Welcome to Justin Airlines Magazine</h2>
+        <p>All the latest news, events, and flights from our community.</p>
+        <a href="https://discord.gg/YOUR_INVITE_CODE" target="_blank"><button>Meet us on Discord!</button></a>
     </section>
 
-    <section id="about">
-        <h2>About Justin Airlines</h2>
-        <p>We are a fun and friendly airline community running on GeoFS. Enjoy virtual flights with us!</p>
+    <section id="news">
+        <h2>Latest News</h2>
+        <div class="cards">
+            <div class="card">
+                <img src="https://via.placeholder.com/300x150" alt="News 1">
+                <h3>New Flight Routes</h3>
+                <p>We’ve added exciting new flight paths for all pilots!</p>
+            </div>
+            <div class="card">
+                <img src="https://via.placeholder.com/300x150" alt="News 2">
+                <h3>Community Event</h3>
+                <p>Join us this weekend for our special GeoFS event.</p>
+            </div>
+            <div class="card">
+                <img src="https://via.placeholder.com/300x150" alt="News 3">
+                <h3>Pilot Spotlight</h3>
+                <p>Meet our featured pilots and learn their tips and tricks.</p>
+            </div>
+        </div>
     </section>
 
-    <section id="flights">
-        <h2>Upcoming Flights</h2>
-        <p>Check our Discord for flight schedules and events!</p>
+    <section id="features">
+        <h2>Features</h2>
+        <div class="cards">
+            <div class="card">
+                <img src="https://via.placeholder.com/300x150" alt="Feature 1">
+                <h3>Aircraft Reviews</h3>
+                <p>Discover the best planes in GeoFS for smooth flying.</p>
+            </div>
+            <div class="card">
+                <img src="https://via.placeholder.com/300x150" alt="Feature 2">
+                <h3>Flight Tips</h3>
+                <p>Learn new tricks to improve your virtual flight experience.</p>
+            </div>
+        </div>
     </section>
 
     <section id="contact">
         <h2>Contact Us</h2>
         <p>Email: <a class="email-link" href="mailto:yourname@example.com">yourname@example.com</a></p>
-    </section>
-</main>
-
-<footer>
-    &copy; 2025 Justin Airlines
-</footer>
-
-</body>
-</html>
-
+        <p>Join our Discord: <a href="https://discord.g
